RESOLVED FIXED208267
MediaResourceLoader leaks resource responses
https://bugs.webkit.org/show_bug.cgi?id=208267
Summary MediaResourceLoader leaks resource responses
Chris Dumez
Reported 2020-02-26 15:20:27 PST
MediaResourceLoader leaks resource responses when browsing in Safari, even though these responses are only used for testing. AVAssetCustomURLBridgeForNSURLSession holds on to the WebCoreNSURLSession, which keeps the MediaResourceLoader alive, even if there is no media on the current page. In turn, the MediaResourceLoader always keeps in memory the last 5 HTTP responses.
Attachments
Patch (3.74 KB, patch)
2020-02-26 15:23 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2020-02-26 15:23:14 PST
WebKit Commit Bot
Comment 2 2020-02-28 13:23:59 PST
Comment on attachment 391788 [details] Patch Clearing flags on attachment: 391788 Committed r257655: <https://trac.webkit.org/changeset/257655>
WebKit Commit Bot
Comment 3 2020-02-28 13:24:00 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2020-02-28 13:24:15 PST
Note You need to log in before you can comment on or make changes to this bug.