MediaResourceLoader leaks resource responses https://bugs.webkit.org/show_bug.cgi?id=208267

Reviewed by Eric Carlson.

MediaResourceLoader leaks resource responses when browsing in Safari, even though these responses are
only used for testing. AVAssetCustomURLBridgeForNSURLSession holds on to the WebCoreNSURLSession, which
keeps the MediaResourceLoader alive, even if there is no media on the current page. In turn, the
MediaResourceLoader always keeps in memory the last 5 HTTP responses.

To address the issue, we now only record these responses when running the tests.

* loader/MediaResourceLoader.cpp:
(WebCore::MediaResourceLoader::recordResponsesForTesting):
(WebCore::MediaResourceLoader::addResponseForTesting):
* loader/MediaResourceLoader.h:
* testing/Internals.cpp:
(WebCore::Internals::resetToConsistentState):


Canonical link: https://commits.webkit.org/221324@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257655 268f45cc-cd09-0410-ab3c-d52691b4dbfc